Add init script

--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "license": "LGPL-3.0-or-later",
-  "engines": {"node": ">=23"},
+  "engines": {
+    "node": ">=23"
+  },
   "scripts": {
     "cert": "bash ./scripts/cert.sh",
     "clean": "bash ./scripts/clean.sh",
@@ -13,6 +15,7 @@
     "dev:example-import-sample": "turbo run dev --filter=@opendaw/example-import-sample",
     "dev:lab": "turbo run dev --filter=@opendaw/lab",
     "dev:yjs-server": "turbo run dev --filter=yjs-server",
+    "init": "bash ./scripts/init.sh",
     "test": "turbo run test --concurrency=1",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
@@ -20,14 +23,13 @@
   },
   "devDependencies": {
     "@types/ssh2-sftp-client": "^9.0.5",
-    "ssh2-sftp-client": "^12.0.1",
     "@typescript-eslint/eslint-plugin": "^7.1.0",
     "@typescript-eslint/parser": "^7.1.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
-    "ts-node": "^10.1.0",
-    "lerna": "^8.2.3",
     "prettier": "^3.6.2",
+    "ssh2-sftp-client": "^12.0.1",
+    "ts-node": "^10.1.0",
     "turbo": "^2.5.5",
     "typescript": "^5.9.2",
     "vitest": "^3.1.3"
